# atomc

./: Cargo.toml  README.md
crates/atomc/: Cargo.toml
crates/atomc-core/: Cargo.toml
crates/atomc-core/src/: config.rs  git.rs  hash.rs  lib.rs  llm.rs  schema.rs  semantic.rs  types.rs
crates/atomc-core/tests/: config_resolution.rs  git_apply.rs  git_diff.rs  llama_cpp_adapter.rs  ollama_adapter.rs  schema_validation.rs  semantic_validation.rs
crates/atomc/src/: cli.rs  main.rs
crates/atomc/tests/: golden.rs  integration.rs
crates/atomc/tests/support/: integration.rs  mod.rs
docs/: 00_architecture.md  01_commit_strategy.md  02_cli_spec.md  03_schema.md  04_llm_prompting.md  05_git_adapter.md  06_testing.md  07_assumptions_learnings.md  08_todo.md  09_mvp_human_first.md
schemas/: README.md
schemas/v1/: commit-apply.json  commit-plan.json  error.json
tests/fixtures/diffs/: mixed_concerns.diff  refactor_plus_feature.diff  simple_feature.diff
tests/fixtures/plans/: invalid_apply.plan.json  invalid_json.txt  invalid_schema.plan.json  invalid_semantic.plan.json  mixed_concerns.plan.json  refactor_plus_feature.plan.json  simple_feature.plan.json  valid_apply.plan.json
