[workspace]
members = ["crates/atomc-core", "crates/atomc"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = "0.7.5"
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
jsonschema = "0.39.0"
ulid = { version = "1.1.2", features = ["serde"] }
sha2 = "0.10.8"
hex = "0.4.3"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros", "time", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
toml = "0.8.19"
directories = "5.0.1"
