[package]
name = "atomc-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jsonschema.workspace = true
ulid.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
directories.workspace = true
once_cell.workspace = true
