[package]
name = "atomc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "atomc"
path = "src/main.rs"

[dependencies]
atomc-core = { path = "../atomc-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
